improved px to ems function - now accepts context

--- a/base/snippets/common.scss
+++ b/base/snippets/common.scss
@@ -20,21 +20,23 @@
 }
 
 
-// Converts a px value to ems. Should only work in absolute em document context (root level)
-@function px-to-ems($value) {
-    @if unit($value) == "px" {
-        $value : no-unit($value) / no-unit($base-font-size);
-        $value : $value * 1em;
-    }
-    @return $value;
-}
-
-
 // Converts an em value to px. Should only work in absolute em document context (root level)
 @function em-to-px($value) {
     @if unit($value) == "em" {
         $value : no-unit($value) * no-unit($base-font-size);
         $value : $value * 1px;
+    }
+    @return $value;
+}
+
+// Converts a px value to ems. Should only work in absolute em document context (root level), unless $context is specified
+@function px-to-ems($value, $context: $base-font-size) {
+    @if unit($context) == "em" {
+        $context: em-to-px($context);
+    }
+    @if unit($value) == "px" {
+        $value : no-unit($value) / no-unit($context);
+        $value : $value * 1em;
     }
     @return $value;
 }
