added sequence mixins

--- a/screen.scss
+++ b/screen.scss
@@ -12,7 +12,10 @@
 
 @import "base/variables",
         "base/fonts",
-        "base/snippets/*",
+        "base/snippets/common",
+        "base/snippets/navigation",
+        "base/snippets/article",
+        "base/snippets/sequence",
         "base/tags";
 
 @import "layout/grids",
