re-added compass reset

--- a/screen.scss
+++ b/screen.scss
@@ -7,6 +7,8 @@
  * @url https://github.com/tbredin/OnionKnight
  */
 
+@import "compass/reset";
+
 @import "base/variables",
         "base/fonts",
         "base/snippets/common",
